# University-BSUIR

./: README.md
1 semester/OAiP/Labs/5/3/: CMakeLists.txt
1 semester/OAiP/Labs/5/4/: CMakeLists.txt  logic.cpp  task4.cpp
1 semester/OAiP/Labs/5/5/: CMakeLists.txt  logic.cpp  logic.h  test_task5.cpp
1 semester/ОАиП/Labs/5/2/: CMakeLists.txt
1 semester/ОАиП/Labs/5/2/shared-lib/: CMakeLists.txt  shared_library.cpp  shared_library.h
2 semester/C#/Lab1/: Program.cs  Отчёт.docx
2 semester/C#/Lab2/: Отчёт.docx
2 semester/C#/Lab3/: Отчёт3.docx
2 semester/C#/Lab4/: Отчёт4.docx
2 semester/C#/Lab5/: Отчёт.docx
2 semester/C#/Lab6/: Отчёт6.docx
2 semester/C#/Lab7/: Отчёт6.docx
2 semester/C#/Lab8/: Lab8.docx
2 semester/C#/Lab9/: Очёт lab9.docx
2 semester/English/: Топик_1.docx  Топик_10.docx  Топик_2.docx  Топик_3.docx  Топик_4.docx  Топик_5.docx  Топик_6.docx  Топик_7.docx  Топик_8.docx  Топик_9.docx
2 semester/RobotArm/: RobotArm.docx
2 semester/Курсач OAiP/: .$1.drawio.bkp  .$2.drawio.bkp  .$3.drawio.bkp  .$4.drawio.bkp  .$5.drawio.bkp  .$функц.drawio.bkp  1.drawio  2.drawio  3.drawio  4.drawio  5.drawio  ~$рсавая.docx  Пояснительная_записка.docx
3 semester/Assembler/Lab1/: Task1.asm  Task2.asm  Отчет.docx
3 semester/Assembler/Lab2/: Task1.asm  Task2.asm  Отчет.docx
3 semester/Assembler/Lab3/: Task1.asm  task1_exe.asm  task2(Я устала).asm  Отчет.docx
3 semester/Assembler/Lab4/: task.asm  Отчет.docx
3 semester/Assembler/Lab5/: file.txt  task(хочу спать).asm  task.asm  Отчет.docx
3 semester/Assembler/Lab6/: file.txt  helloWorld.asm  runit.bat  string.asm  task.asm  test.asm  test.com  Отчёт.docx
3 semester/Assembler/Lab7/: LAB7.ASM  LAB7.CPP  LAB7Ass.ASM  LAB7_inl.CPP  LOGS.TXT  build.bat  Отчёт.docx
3 semester/C#/Lab1/: ClassDiagram1.cd  Program.cs
3 semester/C#/Lab2/: ClassDiagram1.cd  Program.cs
3 semester/C#/Lab3/: ClassDiagram.cd  Program.cs
3 semester/C#/Lab4/: Car.cs  FileService.cs  IFileService.cs  MyCustomComparer.cs  Program.cs
3 semester/БЖЧ/: Lab1.docx  Lab3.docx
3 semester/БЖЧ/ПЗ/: 2.docx  4.docx  5.docx  6.docx  7.docx
3 semester/Курсовая ПЗМА/: Курсовая ПЗМА.docx
3 semester/МЧА/Lab1/: Lab1.maple  Lab1.mw  Лаба1мча.docx
3 semester/МЧА/Lab2/: Лаба2мча.docx
3 semester/МЧА/Lab3/: Lab3.mw  Лаба3мча.docx
3 semester/ПЗМА/Lab1/: Laba1.mw
3 semester/ПЗМА/Lab3/: Laba3.mw
3 semester/ПЗМА/Lab4/: Laba4.mw
4 semester/OOP/Lab1/: readme.md
4 semester/OOP/Lab1 (Console_paint)/: CMakeLists.txt  Canvas.cpp  Canvas.h  CanvasSerializer.cpp  CanvasSerializer.h  Circle.cpp  Circle.h  ConsoleUI.cpp  ConsoleUI.h  Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
4 semester/OOP/Lab1/ConsolePaint/: Actions.cpp  Actions.h  CMakeLists.txt  Canvas.cpp  Canvas.h  CanvasSerializer.cpp  CanvasSerializer.h  Circle.cpp  Circle.h  ConsoleUI.cpp  ConsoleUI.h  Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
4 semester/OOP/Lab1/ConsolePaint/Tests/: test_actions.cpp  test_canvas.cpp  test_consoleui.cpp  test_figures.cpp  test_serializer.cpp
4 semester/OOP/Lab2/: readme.md
4 semester/АВС/: Отчёт_лаба_1.docx  Отчёт_лаба_2.docx  Отчёт_лаба_3.docx
4 semester/ИГИ/: Отчёт_лаба_1.docx  Отчёт_лаба_2.docx  Отчёт_лаба_3.docx  Отчёт_лаба_4.docx
4 semester/МЧА/: Lab11.mw  Lab12.mw  Lab14.mw  Лаба11мча.docx  Лаба12мча.docx  Лаба14мча.docx
5 semester/ABC/: lab1.cpp  lab1.docx  lab2.asm  lab2.docx  lab3.docx
5 semester/МДиСУБД/: Лаба1.docx  Лаба2.docx
(+748 files in other folders)
